--- a/main.css
+++ b/main.css
@@ -40,3 +40,49 @@
     border-radius: 10px;
     border: 3px solid #ffffff;
 }
+
+.bg-buddy{
+    min-height: 100%;
+    min-width: 1024px;
+    width: 100%;
+    height: auto;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.493));
+}
+
+.bg-img {
+    min-height: 100%;
+    min-width: 1024px;
+    width: 100%;
+    height: auto;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -2;
+  }
+  
+  @media screen and (max-width: 1024px) { /* Specific to this particular image */
+    img.bg {
+      left: 50%;
+      margin-left: -512px;   /* 50% */
+    }
+  }
+
+  @font-face {
+    font-family: Monserrat;
+    src: url("static/montserrat/Montserrat-Light.otf") format("opentype");
+}
+
+*{
+    font-family: Monserrat;
+}
+
+.login-box{
+    height: 300px;
+    width: 360px;
+    background: #faffeb;
+    border-radius: 3%;
+}
